--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,5 @@ go_import_path: jsouthworth.net/go/curry
 before_install:
   - go get github.com/mattn/goveralls
 script:
-  - $GOPATH/bin/goveralls -service=travis-ci
-
-
+  - go test -v -coverprofile cover.out
+  - $GOPATH/bin/goveralls -service=travis-ci -v -coverprofile cover.out
